--- a/views/index.pug
+++ b/views/index.pug
@@ -2,4 +2,8 @@ extends layout
 
 block content
   h1= title
-  p Welcome to #{title}
+  script(src="javascripts/player.js") 
+  script(src="javascripts/ranking.js") 
+  img(src="images/malong.png")
+
+
