--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,5 +3,6 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/styles.css')
+    link(rel="shortcut icon" type="image/png" href="images/logo.png")
   body
     block content
