realized fs doesnt work

--- a/views/index.pug
+++ b/views/index.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
   h1= title
-  script(src="javascripts/player.js") 
-  script(src="javascripts/ranking.js") 
+  script(src="./javascripts/player.js") 
+  script(src="./javascripts/ranking.js")
   img(src="images/malong.png")
 
 
