--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,5 +1,6 @@
 html{
-  background-color: rgb(248, 249, 249);
+  /* background-color: rgb(248, 249, 249); */
+  background-color: green;
 }
 /* body {
   min-height:1000px;
