--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,6 +1,5 @@
 html{
-  /* background-color: rgb(248, 249, 249); */
-  background-color: green;
+  background-color: rgb(248, 249, 249);
 }
 /* body {
   min-height:1000px;
