--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,6 @@ extends layout
 
 block content
   h1= title
-  script(src="./javascripts/player.js") 
-  script(src="./javascripts/ranking.js")
+  script(type="module", src="./javascripts/player.js") 
+  script(type="module", src="./javascripts/ranking.js")
   img(src="images/malong.png")
